# RL25_FinalProject

./: README.md
ros2_iiwa/iiwa_description/: package.xml
ros2_iiwa/iiwa_description/config/: iiwa_controllers.yaml
ros2_iiwa/iiwa_description/gazebo/: iiwa.gazebo.xacro
ros2_iiwa/iiwa_description/gazebo/models/: turtlebot_ignition.sdf
ros2_iiwa/iiwa_description/gazebo/models/arucotag/: model.config  model.sdf
ros2_iiwa/iiwa_description/gazebo/models/arucotag_101/: model.config  model.sdf
ros2_iiwa/iiwa_description/gazebo/worlds/: collaborative.world
ros2_iiwa/iiwa_description/launch/: view_robot.launch.py
ros2_iiwa/iiwa_description/rviz/: dual_arm.rviz
ros2_iiwa/iiwa_description/urdf/: collaborative_setup.urdf.xacro  iiwa.urdf.xacro
ros2_pickandplace/: CMakeLists.txt  README.md  package.xml
ros2_pickandplace/config/: dual_controllers.yaml  params.yaml
ros2_pickandplace/include/: kdl_robot.h  robot_control.h
ros2_pickandplace/launch/: collaborative_setup.launch.py
ros2_pickandplace/src/: iiwa_collaborative_node.cpp  kdl_robot.cpp  robot_control.cpp  turtlebot_patrol_node.cpp
