<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_pickandplace</name>
  <version>0.0.0</version>
  <description>Contains controllers and logic for a Pick and Place task</description>
  <maintainer email="l.tulino@studenti.unina.it">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>liborocos-kdl-dev</depend>
  <depend>kdl_parser</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>aruco_ros</depend>
  <depend>sensor_msgs</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>iiwa_description</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
